--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
       font-size: 1.2rem;
       text-decoration: none;
     }
+    .audio-wrapper {
+      margin: 2rem auto;
+      width: 100%;
+      max-width: 400px;
+    }
+    audio {
+      width: 100%;
+      outline: none;
+    }
     @keyframes glitch {
       0% { text-shadow: 2px 2px #f00; }
       50% { text-shadow: -2px -1px #0ff; }
@@ -37,8 +46,26 @@
 <body>
   <h1>villain0.us</h1>
   <p>welcome to the base layer of the brand.<br> glitch gospel / audio artifact / tokyo occult signal</p>
-  <a href="https://0x.villain0.us/ollie/">OLLIE</a>
-  <a href="https://0x.villain0.us/heavenearth/">Heaven & Earth</a>
-  <a href="https://0x.villain0.us/zero-cross-incredible/">Incredible</a>
+
+  <div class="audio-wrapper">
+    <p>OLLIE</p>
+    <audio controls autoplay>
+      <source src="https://0x.villain0.us/zerocross%20-%20ollie%20(mixed).mp3" type="audio/mpeg">
+    </audio>
+  </div>
+
+  <div class="audio-wrapper">
+    <p>HEAVEN & EARTH</p>
+    <audio controls autoplay>
+      <source src="https://0x.villain0.us/heavenearth%20(mixed).mp3" type="audio/mpeg">
+    </audio>
+  </div>
+
+  <div class="audio-wrapper">
+    <p>INCREDIBLE</p>
+    <audio controls autoplay>
+      <source src="https://0x.villain0.us/zero%20cross%20-%20incredible%20(mixed).mp3" type="audio/mpeg">
+    </audio>
+  </div>
 </body>
 </html>
