--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
   </div>
 
   <div class="footer">
-    &copy; 2024 VILLAIN0.US — Built in Tokyo // Hosted in Chaos
+    &copy; 2025 Villainous Brand / Outer Heaven
   </div>
 </body>
 </html>
