--- a/index.html
+++ b/index.html
@@ -92,25 +92,26 @@
 
     .product {
       background: rgba(255, 255, 255, 0.07);
-      border: 2px dashed #0ff;
+      border: 3px dashed #0ff;
       padding: 1rem;
       text-align: center;
-      animation: noise 0.5s infinite;
+      animation: glitchBorder 0.3s infinite alternate;
     }
 
-    .product img {
-      max-width: 100%;
-      border: 1px solid #f0f;
+    @keyframes glitchBorder {
+      0% { border-color: #0ff; transform: scale(1); }
+      25% { border-color: #f0f; transform: scale(1.01); }
+      50% { border-color: #0f0; transform: scale(0.99); }
+      75% { border-color: #ff0; transform: scale(1.02); }
+      100% { border-color: #f00; transform: scale(1); }
+    }
+
+    .ascii-art {
+      white-space: pre-wrap;
+      font-size: 0.9rem;
+      color: #0ff;
+      text-align: left;
       margin-bottom: 1rem;
-    }
-
-    @keyframes noise {
-      0%, 100% { transform: skewX(0); }
-      50% { transform: skewX(1deg); }
-    }
-
-    .product audio {
-      width: 100%;
     }
 
     .footer {
@@ -133,7 +134,7 @@
 </head>
 <body>
   <div class="glitch-title">
-    <span>YOUR VILLAIN ERA</span>
+    <span>YOUR VILLAIN ARC</span>
     <span>STARTS NOW</span>
   </div>
 
@@ -153,27 +154,36 @@
 
     <div class="product-grid">
       <div class="product">
-        <img src="https://0x.villain0.us/mockup-ollie.png" alt="OLLIE Mockup">
-        <h2>OLLIE</h2>
-        <audio controls>
-          <source src="https://0x.villain0.us/zerocross%20-%20ollie%20(mixed).mp3" type="audio/mpeg">
-        </audio>
+        <h2>HAT</h2>
+        <div class="ascii-art">
+          ______<br>
+         /      \<br>
+        |        |<br>
+        \______/ <br>
+         \____/  
+        </div>
         <p>¥666</p>
       </div>
       <div class="product">
-        <img src="https://0x.villain0.us/mockup-incredible.png" alt="Incredible Mockup">
-        <h2>INCREDIBLE</h2>
-        <audio controls>
-          <source src="https://0x.villain0.us/zero%20cross%20-%20incredible%20(mixed).mp3" type="audio/mpeg">
-        </audio>
+        <h2>SHIRT</h2>
+        <div class="ascii-art">
+          |------|<br>
+          |      |<br>
+          |      |<br>
+         /        \<br>
+        |          |
+        </div>
         <p>¥666</p>
       </div>
       <div class="product">
-        <img src="https://0x.villain0.us/mockup-heavenearth.png" alt="Heaven & Earth Mockup">
-        <h2>HEAVEN & EARTH</h2>
-        <audio controls>
-          <source src="https://0x.villain0.us/heavenearth%20(mixed).mp3" type="audio/mpeg">
-        </audio>
+        <h2>HOODIE</h2>
+        <div class="ascii-art">
+          ________<br>
+         |        |<br>
+         |  () () |<br>
+         |   __   |<br>
+         |________|
+        </div>
         <p>¥666</p>
       </div>
     </div>
