--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       color: white;
       font-family: 'Press Start 2P', monospace;
       position: relative;
-      overflow: hidden;
+      overflow-x: hidden;
     }
 
     body::before {
@@ -46,25 +46,31 @@
 
     .glitch-title {
       display: flex;
-      flex-direction: column;
+      justify-content: space-between;
       align-items: center;
-      padding: 2rem 1rem 1rem;
-      font-size: 2.5rem;
+      padding: 4rem 2rem 1rem;
+      font-size: 5vw;
       color: #f0f;
       text-shadow: 0 0 5px #0ff, 0 0 15px #f0f;
       animation: glitchText 1.2s infinite;
       position: relative;
       z-index: 1;
+      width: 100%;
     }
 
-    .glitch-title span {
-      margin: 0.5rem 0;
+    .glitch-title span:first-child {
+      text-align: left;
+    }
+
+    .glitch-title span:last-child {
+      text-align: right;
     }
 
     .glitch-title .now {
-      font-size: 6rem;
+      font-size: 12vw;
+      width: 100%;
+      text-align: center;
       margin-top: 1rem;
-      color: #f0f;
     }
 
     @keyframes glitchText {
@@ -121,14 +127,14 @@
       flex-wrap: wrap;
       justify-content: space-between;
       gap: 2rem;
-      margin: 2rem 0;
+      margin: 3rem 0;
     }
 
     .green-box, .pink-box {
       flex: 1 1 300px;
-      padding: 1.5rem;
-      border: 2px solid;
-      font-size: 1rem;
+      padding: 3rem 2rem;
+      border: 4px solid;
+      font-size: 2.2vw;
       text-align: center;
     }
 
@@ -143,6 +149,16 @@
       white-space: pre-wrap;
     }
 
+    .about-section {
+      padding: 4rem 2rem;
+      text-align: center;
+      font-size: 1.1rem;
+      color: #0ff;
+      max-width: 800px;
+      margin: 3rem auto;
+      border-top: 2px solid #0ff;
+    }
+
     .footer {
       text-align: center;
       margin-top: 4rem;
@@ -155,12 +171,10 @@
 </head>
 <body>
   <div class="glitch-title">
-    <span>YOUR</span>
-    <span>VILLAIN</span>
-    <span>ARC</span>
-    <span>STARTS</span>
-    <span class="now">NOW</span>
+    <span>YOUR VILLAIN</span>
+    <span>ARC STARTS</span>
   </div>
+  <div class="glitch-title now">NOW</div>
 
   <div class="section">
     <div class="product-grid">
@@ -196,6 +210,12 @@
        |    ʙᴀʀᴋ 🧷 ʙᴀʀᴋ   |
         ＼＿＿＿＿＿／
       </div>
+    </div>
+
+    <div class="about-section">
+      Born in Tokyo / Rebellion + Japanese Alt Culture.<br>
+      Glitch gospel. Street zines. Flash drives from the underground.<br>
+      Every drop is a riot, every thread a signal.
     </div>
   </div>
 
